--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.2.0
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
